# JoyPhone

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md
sdk/: vivo_sdk.md
server/: .env.example  pyproject.toml
server/app/: app_goal_resolver.py  chat_title_helpers.py  comm_log.py  decision.py  gateway.py  llm.py  main.py  metrics.py  negotiation.py  protocol.py  scene.py  session.py  skill_cache.py  skills.py
server/app/decision/: __init__.py  cache.py  engine.py  llm.py  pkg_guard.py  skills.py  types.py  ui_inspect.py
server/app/gateway/: __init__.py  connection.py  router.py
server/app/infra/: config.py  metrics.py
server/app/protocol/: __init__.py  models.py
server/app/scenario/: __init__.py  base.py  send_message.py  ui.py
server/app/task/: __init__.py  context.py  fsm.py  handlers.py  policies.py
server/data/samples/: control_center-1784182112866.json  home_first-1784181507348.json  (+5 more)
server/scripts/: e2e_feishu.sh  run_uvicorn_detached.py
server/tests/: test_cache.py  test_chat_title_helpers.py  test_comm_log.py  test_contract.py  test_decision.py  test_decision_types.py  test_engine.py  test_feishu_profile.py  test_fsm.py  test_gateway_integration.py  test_gateway_loop.py  test_handlers.py  test_import_order.py  test_infra_config.py  test_llm.py  test_negotiation.py  test_policies.py  test_protocol.py  test_real_llm.py  test_scenario_base.py  test_scenario_ui.py  test_scene.py  test_send_message_pack.py  test_send_message_policies.py  test_session.py  test_skill_cache.py  test_skills.py  test_task_context.py  test_ui_inspect.py
(+107 files in other folders)
