[project]
name = "ai-work-phone-server"
version = "0.1.0"
requires-python = ">=3.14,<3.15"
dependencies = [
  "fastapi",
  "uvicorn",
  "websockets",
  "pydantic",
  "openai",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]