[project]
name = "ai-work-phone-server"
version = "0.1.0"
requires-python = ">=3.14,<3.15"
dependencies = [
  "fastapi",
  "uvicorn",
  "websockets",
  "pydantic",
  "openai",
  "python-dotenv",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
typeCheckingMode = "basic"
include = ["app"]
exclude = ["tests"]
pythonVersion = "3.14"

[dependency-groups]
dev = [
    "pyright>=1.1.411",
]
